<?xml version="1.0" encoding="utf-8"?>
<restrictions
  xmlns:android="http://schemas.android.com/apk/res/android">
    <restriction android:title="@string/apprest_ver" android:key="version" android:defaultValue="1" android:restrictionType="string" />
    <restriction android:title="@string/apprest_vpnlist" android:key="vpn_configuration_list" android:restrictionType="bundle_array">
        <restriction android:title="@string/apprest_vpnconf" android:key="vpn_configuration" android:restrictionType="bundle">
            <restriction android:description="@string/apprest_uuid_desc" android:title="@string/apprest_uuid" android:key="uuid" android:restrictionType="string" />
            <restriction android:description="@string/apprest_name_desc" android:title="@string/apprest_name" android:key="name" android:restrictionType="string" />
            <restriction android:description="@string/apprest_ovpn_desc" android:title="@string/apprest_ovpn" android:key="ovpn" android:restrictionType="string" />
            <restriction android:description="@string/apprest_certalias_desc" android:title="@string/apprest_certalias" android:key="certificate_alias" android:defaultValue="" android:restrictionType="string" />
            <restriction android:description="@string/apprest_vpn_applist_desc" android:title="@string/apprest_vpn_applist" android:key="allowed_apps" android:restrictionType="string" />
        </restriction>
    </restriction>
    <restriction android:title="@string/apprest_defprof" android:key="defaultprofile" android:defaultValue="" android:restrictionType="string" />
    <restriction android:title="@string/restriction_pausevpn" android:key="screenoffpausevpn" android:restrictionType="bool" />
    <restriction android:title="@string/restriction_restartvpnonboot" android:key="restartvpnonboot" android:restrictionType="bool" />
    <restriction android:title="@string/restriction_ignorenetworkstate" android:key="ignorenetworkstate" android:restrictionType="bool" />
    <restriction android:description="@string/apprest_aidl_list" android:title="@string/apprest_remoteaidl" android:key="allowed_remote_access" android:restrictionType="string" />
</restrictions>
